# py-webcrawler

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
tests/e2e/: test_e2e.py
tests/unit/: test_web_crawler.py  test_web_crawler_async.py
tests/unit/models/: test_web_node.py
tests/unit/services.py/: test_web_crawler_service.py
tests/unit/utils/: test_singleton.py  test_web_crawler_exception.py  test_web_crawler_logger.py
web_crawler/: __init__.py  web_crawler.py  web_crawler_async.py
web_crawler/models/: web_node.py
web_crawler/services/: web_crawler_service.py
web_crawler/utils/: exceptions.py  singleton.py  web_crawler_logger.py
web_crawler_cli/: web_crawler_cli.py
web_crawler_cli/commands/: cmd_crawl.py
