[tool.poetry]
name = "py-webcrawler"
version = "0.1.0"
description = "python web crawler"
authors = [""]
packages = [
    { include = "web_crawler"}
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
