[tool.poetry]
name = "py-webcrawler"
version = "0.1.0"
description = "Python web crawler"
authors = ["Patricio Tula <tula.patricio@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "web_crawler"},
    { include = "web_crawler_cli"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pycodestyle = "^2.7.0"
mypy = "^0.910"
types-requests = "^2.25.0"

[tool.poetry.scripts]
web_crawler = "web_crawler_cli.web_crawler_cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
